force-app/main/default/objects/Leave_Balance__c/Leave_Balance__c.object-meta.xml
<CustomObject>
    <label>Leave Balance</label>
    <nameField>
        <displayFormat>Leave-{0000}</displayFormat>
        <label>Leave Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Leave Balance</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>