force-app/main/default/objects/Leave_Balance__c/fields/Child_Birth_Date__c.field-meta.xml
<CustomField>
    <fullName>Child_Birth_Date__c</fullName>
    <label>Child Birth Date</label>
    <type>Date</type>
</CustomField>