force-app/main/default/objects/Leave_Balance__c/fields/Maternity_Leave_From__c.field-meta.xml
<CustomField>
    <fullName>Maternity_Leave_From__c</fullName>
    <label>Maternity Leave From</label>
    <type>Date</type>
</CustomField>