force-app/main/default/objects/Leave_Balance__c/fields/Maternity_Leave_To__c.field-meta.xml
<CustomField>
    <fullName>Maternity_Leave_To__c</fullName>
    <formula>Maternity_Leave_From__c + 180</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Maternity Leave To</label>
    <type>Date</type>
</CustomField>