force-app/main/default/objects/Leave_Balance__c/fields/Paternity_Leave_From__c.field-meta.xml
<CustomField>
    <fullName>Paternity_Leave_From__c</fullName>
    <label>Paternity Leave From</label>
    <type>Date</type>
</CustomField>