force-app/main/default/objects/Leave_Balance__c/fields/Paternity_Leave_To__c.field-meta.xml
<CustomField>
    <fullName>Paternity_Leave_To__c</fullName>
    <formula>Paternity_Leave_From__c + 3</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Paternity Leave To</label>
    <type>Date</type>
</CustomField>